--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
 .sidebar { flex:1; padding:20px; display:flex; flex-direction:column; gap:10px; border-left:1px solid #ddd; background:inherit; }
 .message { padding:10px; border-radius:8px; background:#e9ecef; word-wrap:break-word; line-height:1.4; }
 .message img { max-width:300px; border-radius:6px; margin-top:6px; display:block; }
-.message a { color: #2c7be5; word-break:break-all; }
+.message a { color:#2c7be5; word-break:break-all; }
 input, textarea { width:100%; padding:10px; border-radius:8px; border:1px solid #ccc; outline:none; }
 textarea { resize:none; height:100px; }
 button { padding:10px; background:#5cb85c; color:white; border:none; border-radius:8px; cursor:pointer; }
@@ -38,11 +38,11 @@ button:disabled { opacity:0.5; cursor:not-allowed; }
 .pin-box { background:#fff; padding:30px; border-radius:12px; text-align:center; width:90%; max-width:300px; }
 .pin-box input { width:100%; padding:12px; border-radius:8px; border:1px solid #ccc; text-align:center; margin-bottom:15px; font-size:1em; }
 .pin-box button { padding:10px 18px; border-radius:8px; border:none; background:#5cb85c; color:#fff; cursor:pointer; }
+#signOutBtn { background:#d9534f; }
 </style>
 </head>
 <body>
 
-<!-- PIN overlay -->
 <div class="overlay" id="pinOverlay">
   <div class="pin-box">
     <h2>Enter PIN</h2>
@@ -51,91 +51,89 @@ button:disabled { opacity:0.5; cursor:not-allowed; }
   </div>
 </div>
 
-<!-- Main Chat Container -->
 <div class="chat-container" id="chatApp" style="display:none;">
   <div id="chat"></div>
   <div class="sidebar">
-    <input type="text" id="usernameInput" placeholder="Enter your display name" />
+    <input type="text" id="usernameInput" placeholder="Enter display name" />
     <textarea id="messageInput" placeholder="Type message or paste image URL..." disabled></textarea>
     <button id="sendBtn" disabled>Send</button>
+    <button id="signOutBtn">Sign Out</button>
   </div>
 </div>
 
 <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
 <script>
+const COMMON_PIN = '5432';
 const ABLY_KEY = 'Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4';
 const ably = new Ably.Realtime(ABLY_KEY);
 const channel = ably.channels.get('honest-chat');
 
-const chatDiv = document.getElementById('chat');
-const usernameInput = document.getElementById('usernameInput');
-const messageInput = document.getElementById('messageInput');
-const sendBtn = document.getElementById('sendBtn');
 const pinOverlay = document.getElementById('pinOverlay');
 const pinInput = document.getElementById('pinInput');
 const pinBtn = document.getElementById('pinBtn');
 const chatApp = document.getElementById('chatApp');
+const usernameInput = document.getElementById('usernameInput');
+const messageInput = document.getElementById('messageInput');
+const sendBtn = document.getElementById('sendBtn');
+const chatDiv = document.getElementById('chat');
+const signOutBtn = document.getElementById('signOutBtn');
 
-const COMMON_PIN = '5432';
 let username = '';
 
-// Check PIN once per device
+// PIN check
 if(localStorage.getItem('chatPin') === COMMON_PIN){
   pinOverlay.style.display='none';
   chatApp.style.display='flex';
   const savedName = localStorage.getItem('username');
   if(savedName){
     username = savedName;
-    usernameInput.value = username;
+    usernameInput.value=username;
     enableChat();
   }
 }
 
-// PIN entry
-pinBtn.addEventListener('click', () => {
+pinBtn.addEventListener('click',()=>{
   if(pinInput.value.trim()===COMMON_PIN){
     localStorage.setItem('chatPin', COMMON_PIN);
     pinOverlay.style.display='none';
     chatApp.style.display='flex';
     const savedName = localStorage.getItem('username');
     if(savedName){
-      username = savedName;
-      usernameInput.value = username;
+      username=savedName;
+      usernameInput.value=username;
       enableChat();
     }
-  } else {
-    alert("Wrong PIN");
-  }
+  } else alert('Wrong PIN');
 });
 
 // Username input
-usernameInput.addEventListener('change', () => {
-  const name = usernameInput.value.trim();
+usernameInput.addEventListener('change',()=>{
+  const name=usernameInput.value.trim();
   if(!name) return;
-  username = name;
-  localStorage.setItem('username', username);
+  username=name;
+  localStorage.setItem('username',username);
   enableChat();
 });
 
 function enableChat(){
-  messageInput.disabled = false;
-  sendBtn.disabled = false;
+  messageInput.disabled=false;
+  sendBtn.disabled=false;
   loadHistory();
 }
 
-// Display message (images, links)
+// Display message (image/link detection)
 function displayMessage({username,message,timestamp}){
-  const msgEl = document.createElement('div');
+  const msgEl=document.createElement('div');
   msgEl.className='message';
-  let content = message;
+  let content=message;
   if(message.match(/^https?:\/\/.*\.(jpg|jpeg|png|gif|webp)$/i)){
-    content = `<img src="${message}" alt="image">`;
+    content=`<img src="${message}" alt="image">`;
   } else if(message.match(/^https?:\/\//i)){
-    content = `<a href="${message}" target="_blank">${message}</a>`;
+    content=`<a href="${message}" target="_blank">${message}</a>`;
   }
-  msgEl.innerHTML = `<strong>${username}</strong>: ${content} <span class="timestamp" style="font-size:0.8em;color:#666;">${new Date(timestamp).toLocaleTimeString()}</span>`;
+  msgEl.innerHTML=`<strong>${username}</strong>: ${content} <span style="font-size:0.8em;color:#666;">${new Date(timestamp).toLocaleTimeString()}</span>`;
   chatDiv.appendChild(msgEl);
-  chatDiv.scrollTop = chatDiv.scrollHeight;
+  chatDiv.scrollTop=chatDiv.scrollHeight;
 }
 
 // Load all previous messages
@@ -153,6 +151,14 @@ channel.subscribe('message', msg=>{
 });
 
 // Send message
+function sendMessage(){
+  const text=messageInput.value.trim();
+  if(!text || !username) return;
+  const data={username,message:text,timestamp:Date.now()};
+  channel.publish('message', JSON.stringify(data));
+  messageInput.value='';
+}
+
 sendBtn.addEventListener('click', sendMessage);
 messageInput.addEventListener('keypress', e=>{
   if(e.key==='Enter' && !e.shiftKey){
@@ -161,13 +167,15 @@ messageInput.addEventListener('keypress', e=>{
   }
 });
 
-function sendMessage(){
-  const text = messageInput.value.trim();
-  if(!text || !username) return;
-  const data = {username, message:text, timestamp:Date.now()};
-  channel.publish('message', JSON.stringify(data));
-  messageInput.value='';
-}
+// Sign out
+signOutBtn.addEventListener('click',()=>{
+  localStorage.removeItem('chatPin');
+  localStorage.removeItem('username');
+  username='';
+  chatDiv.innerHTML='';
+  pinOverlay.style.display='flex';
+  chatApp.style.display='none';
+});
 </script>
 </body>
 </html>
